--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@types/node": "^16.18.121",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/styled-components": "^5.1.34",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.13",
+    "styled-components": "^6.1.14",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
