--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.1.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.3.0",
     "@mui/styled-engine-sc": "^6.1.10",
@@ -20,6 +23,7 @@
     "@types/styled-components": "^5.1.34",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.14",
